# ClayenNet

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.dev.yaml  compose.yaml  entrypoint.sh  pyproject.toml  wg-domestic.example.conf  wg-foreign.example.conf
alembic/: env.py
alembic/versions/: 2025_08_06_1920-c26ec36e1f49_initial_revision.py  2025_08_07_0301-30f9582620d5_networks.py
bot/: .prettierignore  .prettierrc  Dockerfile  drizzle.config.ts  package.json
bot/drizzle/: 0000_initial.sql  0001_publickkey.sql
bot/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
bot/src/: config.ts  index.ts
bot/src/bot/: index.ts
bot/src/db/: connection.ts  index.ts  schema.ts
bot/src/nodes/: entry-node.ts
domestic/: Dockerfile  entrypoint.sh
foreign/: entrypoint.sh
node/: .env.example  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
node/src/: auth.py  config.py  main.py  state.py
node/src/wireguard/: models.py  router.py
node/src/wstunnel/: models.py  router.py  tunnel.py
src/: auth.py  main.py  middleware.py  num_emoji.py  schema.py  settings.py  wg_config.py  wg_keys.py  wg_server.py  wstunnel.py
src/routers/: __init__.py  admin.py  device.py
src/use_cases/: device.py
